core-schema/src/snapshots/core_schema__schema__tests__it_errors_when_no_schema_defs_are_present.snap
---
source: core-schema/src/schema.rs
expression: "{\n    let schema =\n        Schema::parse(r#\"\n            type User {\n                id: ID!\n            }\n        \"#)?;\n    (schema.errors, schema.features)\n}"
---
(
    [
        NoSchemas,
    ],
    [],
)
