core-schema/src/snapshots/core_schema__schema__tests__it_is_ok_when_prefixes_are_disambugated.snap
---
source: core-schema/src/schema.rs
expression: "{\n    let schema =\n        Schema::parse(r#\"\n            schema\n                @core(feature: \"https://lib.apollo.dev/core/v0.1\")\n                @core(feature: \"https://spec.example.com/A/v1.0\")\n                @core(feature: \"https://spec.example.com/B/v2.3\")\n                @core(feature: \"https://somewhere-else.specs.com/A/v1.0\", as: \"otherA\")\n            {\n                query: Query\n            }\n        \"#)?;\n    (schema.errors, schema.features)\n}"
---
(
    [],
    [
        Feature {
            spec: Spec {
                identity: "https://lib.apollo.dev/core",
                name: "core",
                version: Version(
                    0,
                    1,
                ),
            },
            name: "core",
            position: Pos(3:17),
        },
        Feature {
            spec: Spec {
                identity: "https://spec.example.com/A",
                name: "A",
                version: Version(
                    1,
                    0,
                ),
            },
            name: "A",
            position: Pos(4:17),
        },
        Feature {
            spec: Spec {
                identity: "https://spec.example.com/B",
                name: "B",
                version: Version(
                    2,
                    3,
                ),
            },
            name: "B",
            position: Pos(5:17),
        },
        Feature {
            spec: Spec {
                identity: "https://somewhere-else.specs.com/A",
                name: "A",
                version: Version(
                    1,
                    0,
                ),
            },
            name: "otherA",
            position: Pos(6:17),
        },
    ],
)
